Refactor index.html with updated styles and scripts
The HTML document has been updated with new styles, structure, and functionality for faction toggling and link interactions.

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </main>
 
     <footer>
-      本页面为魔兽世界主题风格的个人导航页，链接均指向公开站点。您可按需自行增删。
+      本页面游戏内容只提供学习研究，请在24小时之内自行删除相关内容.后果自负.
     </footer>
   </div>
 
@@ -353,4 +353,5 @@
     })();
   </script>
 </body>
+
 </html>
