--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </main>
 
     <footer>
-      本页面游戏内容只提供学习研究，请在24小时之内自行删除相关内容.后果自负.
+      本页面游戏内容只提供学习研究 请在24小时之内 自行删除相关内容 后果自负 
     </footer>
   </div>
 
@@ -355,3 +355,4 @@
 </body>
 
 </html>
+
