Remove duplicate HTML structure from index.html
Removed duplicate HTML structure and cleaned up formatting.

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </main>
 
     <footer>
-      本页面游戏内容只提供学习研究 请在24小时之内 自行删除相关内容 后果自负 
+      本页面游戏内容只提供学习研究！玩家游戏研究QQ群:971948904  
     </footer>
   </div>
 
@@ -355,4 +355,5 @@
 </body>
 
 </html>
+
 
